--- a/assets/src/sass/_variables.scss
+++ b/assets/src/sass/_variables.scss
@@ -1,9 +1,12 @@
 // Colors
 $primary: #a0c4ff;
-$secondary: #b3e5f5;
+$secondary: #a8e98e;
 $white: #FFF;
 $black: #000;
-$shadow: rgba(0, 0, 0, 0.377);
-$basic1: #f13f3f;
+$red: #a60311;
+$red50: rgba(236, 22, 22, 0.5);
+$shadow: rgba(73, 73, 73, 0.308);
+$basic1: #f3efefe1;
 $placeholder: rgba(182, 182, 182, 0.877);
-$blue: #5395f8;
+$blue: #4a33cc;
+$blue50: rgba(72, 60, 241, 0.5);
