--- a/assets/src/sass/style.scss
+++ b/assets/src/sass/style.scss
@@ -1,6 +1,7 @@
 @use './variables' as *;
 @use './form-preview-schema' as *;
 @use './form-add_field' as *;
+@use './components' as *;
 
 #wpcontent{
   padding: 0;
