--- a/assets/src/sass/_form-preview-schema.scss
+++ b/assets/src/sass/_form-preview-schema.scss
@@ -55,7 +55,7 @@
     flex-direction: column;
     gap: 16px;
 
-    .vs-settings {
+    .form-settings {
       display: flex;
       align-items: center;
       gap: 6px;
@@ -69,7 +69,7 @@
         align-items: center;
       }
 
-      &.vs-emails, &.vs-btn-label {
+      &.form-emails, &.form-btn-label {
         flex-direction: column;
         align-items: start;
 
@@ -119,7 +119,7 @@
     }
   }
 
-  .vs-field{
+  .form-field{
     display: flex;
     align-items: center;
     gap: 6px;
