## Vista para ver el reporte detallado de los registros
## ARchivo ajax para controlar peticion http
1. Se crea endpoint para eliminar formularios

### Se cambia método que elimina los formularios
1. Ahora se usa el ID en lugar del nombre del formulario

--- a/assets/src/sass/_components.scss
+++ b/assets/src/sass/_components.scss
@@ -1,7 +1,7 @@
 @use './variables' as *;
 
 // Botones
-button{
+button, .button{
   border-radius: 8px;
   padding: 14px 20px;
   line-height: 1;
@@ -31,7 +31,7 @@ button{
   }
   &.btn-caution{
     background-color: $red50;
-    color: $red;
+    color: $white;
   }
   &.btn-edit-field{
     background-color: transparent;
