## Se agrega soporte para guardar multiples archivos
## se agrega soporte para guardar los valores de in checkbox con multiples valores

--- a/assets/src/frontend/simple-forms.css
+++ b/assets/src/frontend/simple-forms.css
@@ -27,6 +27,14 @@ form{
       display: flex;
       flex-direction: column;
       gap: 5px;
+
+      &.single-checkbox{
+        flex-direction: row;
+
+        label{
+          order: 2;
+        }
+      }
   
       label{
         font-size: 16px;
@@ -34,7 +42,7 @@ form{
         font-weight: 400;
       }
   
-      input{
+      input, select, textarea{
         border: 1px solid var(--border);
         border-radius: 4px;
         padding: 5px 10px;
